Fixed page overflow

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -52,7 +52,7 @@ body > .main {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    overflow: auto;
+    /*overflow: auto;*/
     width: 100%;
     display: inline-block;
 }
